# hermes-persona

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCOVERY_BRIEF.md  IMPLEMENTATION_AND_REVIEW_CYCLE1.md  IMPLEMENTATION_AND_REVIEW_PLAN.md  LICENSE  NEXT_ROADMAP.md  QA_REPORT.md  QA_REPORT_CYCLE1.md  README.md  RELEASE_CHECKLIST_AND_DEPLOYMENT_PLAN.md  RELEASE_NOTE_DRAFT_CYCLE1.md  REQUIREMENTS_AND_SPEC.md  REQUIREMENTS_AND_SPEC_UPDATE.md  ROADMAP_ITEM_SELECTION.md  ROADMAP_UPDATE_CYCLE1.md  SECURITY_AUDIT.md  SOUL.md  TASK_BREAKDOWN.md  TASK_BREAKDOWN_CYCLE1.md  install.sh  install.sh.sha256  pyproject.toml  role-manifest.sha256  sbom.cdx.json  test_benchmark.py  test_persona.py
.github/ISSUE_TEMPLATE/: 01-hardcoded-path.md
.github/workflows/: ci.yml  sbom.yml  sha-check.yml
agent/: anima_persona.py
archive/references/: chain-propagation-test.md  docker-smoke-test.md  kanban-guidance-patch.md  korean-usage-patterns.md  multi-agent-cross-validation.md  role-url-patterns.md  security-audit-methodology.md
docs/: persona-v2-plan.md
scripts/: generate-role-manifest.py  generate-sbom.py  patch-gateway-anima-persona.py  patch-kanban-guidance-anima.py  scan-role-content.py
skills/anima/: SKILL.md
skills/anima/profiles/: ai-ml.md  design.md  education.md  engineering.md  gaming.md  healthcare.md  legal.md  management.md  marketing.md  operations.md  paid-media.md  product.md  research.md  sales.md  specialized.md
skills/persona/: SKILL.md
skills/persona/references/: adaptive-expertise-research.md  arch-audit-20260505.md  benchmark-methodology.md  cdpd-model.md  (+24 more)
(+4 files in other folders)
