[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-persona"
version = "0.1.0"
description = "🎭 Expert role adoption for Hermes Agent kanban workers — 172 specialists across 15 domains"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Caixa-git"},
]
keywords = ["hermes-agent", "kanban", "persona", "multi-agent", "role-adoption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100
target_version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "I",   # isort
    "N",   # naming
]
ignore = [
    "E501",  # line length — handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
